# nn_comparison

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: Common.cmake
datasets/: CMakeLists.txt  cicada.csv  iris.csv  new-thyroid.csv  wheat-seeds.csv  wine.csv
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  activation_functions.hpp  inertia_weights.hpp  layers.hpp  loss_functions.hpp  networks.hpp  params_types.hpp  vector_types.hpp
src/common/activation_functions/: CMakeLists.txt  activation_function.cpp  activation_function.hpp  sigmoid.cpp  sigmoid.hpp
src/common/dataset/: CMakeLists.txt  dataset.cpp  dataset.hpp  dataset_type.hpp
src/common/enum/: network_type.hpp  test_dataset.hpp
src/common/generator/: CMakeLists.txt  generator.cpp  generator.hpp
src/common/inertia_weights/: CMakeLists.txt  inertia_weight.cpp  inertia_weight.hpp  linear_decreasing_inertia_weight.cpp  linear_decreasing_inertia_weight.hpp
src/common/loss_functions/: CMakeLists.txt  loss_function.cpp  loss_function.hpp  mean_squared_error.cpp  mean_squared_error.hpp
src/common/params/: CMakeLists.txt  backprop_params.cpp  backprop_params.hpp  base_pso_params.cpp  base_pso_params.hpp  clpso_params.cpp  clpso_params.hpp  pso_params.cpp  pso_params.hpp
src/common/utils/: utils.hpp  utils_impl.hpp
src/layers/: CMakeLists.txt
src/layers/backprop/: CMakeLists.txt  backprop_layer.cpp  backprop_layer.hpp
src/layers/base/: CMakeLists.txt  layer.cpp  layer.hpp
src/layers/pso/: CMakeLists.txt  pso_layer.cpp  pso_layer.hpp
src/networks/: CMakeLists.txt
src/networks/backprop/: CMakeLists.txt  backprop_network.cpp  backprop_network.hpp
src/networks/base/: CMakeLists.txt  base_network.cpp  base_network.hpp
src/networks/base_pso/: CMakeLists.txt  base_pso_network.cpp  base_pso_network.hpp
src/networks/clpso/: CMakeLists.txt  clpso_network.cpp  clpso_network.hpp
src/networks/iclpso/: CMakeLists.txt  iclpso_network.cpp  iclpso_network.hpp
src/networks/pso/: CMakeLists.txt  pso_network.cpp  pso_network.hpp
src/swarms/: CMakeLists.txt
src/swarms/base/: CMakeLists.txt  particles.hpp  swarm.cpp  swarm.hpp
src/swarms/clpso/: CMakeLists.txt  clpso_swarm.cpp  clpso_swarm.hpp
src/swarms/iclpso/: CMakeLists.txt  iclpso_swarm.cpp  iclpso_swarm.hpp
src/swarms/pso/: CMakeLists.txt  pso_swarm.cpp  pso_swarm.hpp
test/: CMakeLists.txt  test-backprop-layer.cpp  test-clpso-swarm.cpp  test-layer.cpp  test-pso-layer.cpp  test-pso-swarm.cpp  test-swarm.cpp
test/mocks/: CMakeLists.txt  swarm_mock.cpp  swarm_mock.hpp
test/test-classes/: CMakeLists.txt
test/test-classes/swarms/: CMakeLists.txt  clpso_swarm_test.cpp  clpso_swarm_test.hpp  iclpso_swarm_test.cpp  iclpso_swarm_test.hpp  pso_swarm_test.cpp  pso_swarm_test.hpp
